# C-C-_learn

./: .gitignore  CMakeLists.txt  main  main.c  main.cpp
CAlgorithm_test/: CMakeLists.txt  ceshi.cpp
CAlgorithm_test/1-1/: main  main.c  main.s
CAlgorithm_test/1-2-浮点输出/: main.c
CAlgorithm_test/1-3-开方/: main.c
CAlgorithm_test/1-4-流重定向/: data.out  main.c
CAlgorithm_test/1-5/: data.in  data.out  main.c
CAlgorithm_test/1-6/: main.c
CAlgorithm_test/1-7/: main.c
CAlgorithm_test/2-3/: main.c
CAlgorithm_test/2-4/: main.c
CAlgorithm_test/2-5/: input.txt  main.c  output.txt
CAlgorithm_test/3-1/: data.in  main.c
CAlgorithm_test/3-1 逆序输出/: main.c
CAlgorithm_test/3-2/: data.in  data.out  main.c
CAlgorithm_test/3-2 开灯问题/: main.c
CAlgorithm_test/3-3/: data.in  data.out  main.c
CAlgorithm_test/3-3 蛇形填数/: main.c
CAlgorithm_test/3-4/: data.out  main.c
CAlgorithm_test/3-5/: data.in  data.out  main.c
CAlgorithm_test/3-5TeX的引号/: main.c
CAlgorithm_test/3-6/: main.c
CAlgorithm_test/3n+1/: main.c
CAlgorithm_test/4-10 递归法计算阶层/: main.c
CAlgorithm_test/4-4信息编码/: data.in  main.c
CAlgorithm_test/4-5追踪电子表格的单元格/: main.c
CAlgorithm_test/5-1-2引用/: main.cpp
CAlgorithm_test/5-1-4再谈结构体/: main.cpp
CAlgorithm_test/5-10PGA巡回赛的奖金/: main.cpp
CAlgorithm_test/5-11邮件传输代理的交互/: main.cpp
CAlgorithm_test/5-12城市正视图/: main.cpp
CAlgorithm_test/5-2-1排序与检索/: main.cpp
CAlgorithm_test/5-2-3集合/: main.cpp
CAlgorithm_test/5-2-4映射/: main.cpp
CAlgorithm_test/5-2木块问题/: main.cpp
CAlgorithm_test/5-5集合栈计算机/: main.cpp
CAlgorithm_test/5-6团队队列/: main.cpp
CAlgorithm_test/5-7丑数/: main.cpp
CAlgorithm_test/5-8Unix ls命令/: main.cpp
CAlgorithm_test/5-9数据库/: main.cpp
CAlgorithm_test/6-10下落的树叶/: main.cpp
CAlgorithm_test/6-13古代象形符号/: 1.txt  main.cpp
CAlgorithm_test/6-14Abbott的复仇/: in.txt  main.cpp
CAlgorithm_test/6-16单词/: input.txt  main.cpp
CAlgorithm_test/6-17看图写树/: in.txt  main.cpp
CAlgorithm_test/6-18雕塑/: main.cpp
CAlgorithm_test/6-19自组合/: main.cpp
Decrypt/: main.c
(+240 files in other folders)
