# cmake最低版本要求
cmake_minimum_required()

# 项目信息
project(C)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")

# 指定生成目标
#add_executable(main network/main.c)
#add_executable(main string_learn/1.c)
#add_executable(main stdlib_learn/api.c)
#add_executable(main process_learn/1.c)
#add_executable(arm arm/main.c)
#add_executable(func_pm 传入参数与传出参数/func_pm.c 语法/1.c)
#add_executable(1 语法/1.c linux/signal_learn/1.c)
#add_executable(1 linux/unistd_learn/1.c)
#add_executable(1 linux/setjmp_learn/1.c)
#add_executable(main main.c)
#add_executable(aes_test aes_test.c)
#add_executable(main Decrypt/main.cpp)
# add_executable(main so_build/run/main.c)
add_executable(main main.c)
